*Empty MediaWiki Message*

--- a/Арбан_Микал_Миклай.mw
+++ b/Арбан_Микал_Миклай.mw
@@ -1,11 +1,11 @@
 {{Викификаций}}
 '''Арбан Микал Миклай''' ({{lang-ru|Николай Михайлович Арбан}}) ([[30 Кылме]] [[1912]] —  [[2 Ага]] [[1995]]) — [[марий]] уста драматург, [[семлызе]], [[сӱретче]] да балейтместер.
 
-Арбан Микал Миклай, ончычсо  {{comment|тукымлӱмжо|фамилийже}} Деревяшкин, 1912 ий 30 Кылме тылзыште [[Маскасола кундем]] [[Арбан]] [[ял]]ыште [[кресаньык]] ешеш шочын. Тунам илыш йӧсӧ лийын гынат, самырык рвезе шонен пыштымыжым мучаш марте шукташ тыршен, эше тӱҥалтыш школышто тунеммыж  годымак шке мастарлыкшым ончыктен: моторын сӱретлен, пырдыж газетым луктеден, скрипка денат шокташ тӧчен. Тӱҥалтыш школым тунем пытармеке, Арбан [[Йошкар-Ола]]се шымияш школышто тунемаш тӱҥалеш, тыге [[сымыктыш]] деке утларак лишемаш у йӧн лектеш. Школышто тунеммыж годым театрыш корным такырта. Шымияш школым тунем лекмек, Арбан Миклай театыр пеленсе декоративне {{comment|устапӧртыш|мастерскойыш}} сӱретчелан пашам ышташ пура: афишым возкала, спектакльлан декорацийым ямдылкала. Полмезе рвезын пашаче улмыжым шижын, Марий сем-театыр техникумыш пураш манын, тудлан курсыш тунемаш каяш темлат.
+Арбан Микал Миклай, ончычсо  {{comment|тукымлӱмжо|фамилийже}} Деревяшкин, 1912 ий 30 Кылме тылзыште [[Маскасола кундем]] [[Арбан]] [[ял]]ыште [[кресаньык]] ешеш шочын. Тунам илыш йӧсӧ лийын гынат, самырык рвезе шонен пыштымыжым мучаш марте шукташ тыршен, эше тӱҥалтыш школышто тунеммыж  годымак шке мастарлыкшым ончыктен: моторын сӱретлен, пырдыж газетым луктеден, [[скрипке]] денат шокташ тӧчен. Тӱҥалтыш школым тунем пытармеке, Арбан [[Йошкар-Ола]]се шымияш школышто тунемаш тӱҥалеш, тыге [[сымыктыш]] деке утларак лишемаш у йӧн лектеш. Школышто тунеммыж годым театрыш корным такырта. Шымияш школым тунем лекмек, Арбан Миклай театыр пеленсе декоративне {{comment|устапӧртыш|мастерскойыш}} сӱретчелан пашам ышташ пура: афишым возкала, спектакльлан декорацийым ямдылкала. Полмезе рвезын пашаче улмыжым шижын, Марий сем-театыр техникумыш пураш манын, тудлан курсыш тунемаш каяш темлат.
 
 [[1929]] ийын театыр студийыш у тӱшкам погат. Арбанат тушко йодмашым воза. Театырыште пашам ыштыме годым массовкышто модмыжым шотыш налын, тунемаш экзамен деч посна пуртат. Тиде студийыште Арбан ик ийым веле тунемеш, тудлан [[Моско]]ш театральный сӱретчелан тунемаш каяш путьовкым кучыктат. А Москоште марий рвезым вес увер вучен: {{comment|Пӱтынь Ушем|Всесоюзный}} сӱретче училищын декоративне пӧлкам [[Санкт-Петербург|Ленинградыш]] кусареныт. Садлан Миклайлан корным умбаке шуяш верештын. Туге гынат черланымылан кӧра {{comment|эмлызе|врач}} «Ленинградыште илаш ом темле» манме справкым кучыкта.
 
-Арбан Миклайлан Йолшкар-Олаш пӧртылаш логалын. Тиде ийынак {{comment|сем-студийыш|музыкальный студийыш|}} экзаменым кучымек, Арбан Миклай скрипка пӧлкаште тунемаш тӱҥалеш.
+Арбан Миклайлан Йолшкар-Олаш пӧртылаш логалын. Тиде ийынак {{comment|сем-студийыш|музыкальный студийыш|}} экзаменым кучымек, Арбан Миклай скрипке пӧлкаште тунемаш тӱҥалеш.
 
 Арбан Миклай {{comment|сем-театыр училищым|музыкально-театральный училищым}} 1934 ийыште тунем пытара. Лач тиде жапыште  тудо сылнымут дек шӱмаҥын, шкежат возкален ончен. Николай Арбан сылнымут пашан ик эн неле ужашыштыже – драмыште - шке вийжым тергаш тӱҥалеш, лач тыште моштымашыжым тапта, усталыкшым ончыкта.
 
