--- a/И._С._Палантай_лӱмеш_тӱвыра_да_сымыктыш_колледж.mw
+++ b/И._С._Палантай_лӱмеш_тӱвыра_да_сымыктыш_колледж.mw
@@ -15,7 +15,7 @@
 * 071302 – «Мер-тӱвыра паша» («Социально-культурная деятельность и народное художественное творчество»)
 
 == Икшывыже-влак == 
-Колледж дене пырля Изи филармоний пашам ышта, тудын пелен 22 коллектив тырша (симфонический оркестр, калык семӱзгар оркестр (оркестр народных инструментов), [[скрипка]] ансамбль (ансамбль скрипачей), [[виолончель]] ансамбль (ансамбль виолончелистов), [[кӱсле]]зе ансамбль), калык куштымаш ансамбль "Рвезылык", калык муро ансамбль "Эреҥер", эстраде да джаз сем ансамбль "Колледжаз".
+Колледж дене пырля Изи филармоний пашам ышта, тудын пелен 22 коллектив тырша (симфонический оркестр, калык семӱзгар оркестр (оркестр народных инструментов), [[скрипке]] ансамбль (ансамбль скрипачей), [[виолончель]] ансамбль (ансамбль виолончелистов), [[кӱсле]]зе ансамбль), калык куштымаш ансамбль "Рвезылык", калык муро ансамбль "Эреҥер", эстраде да джаз сем ансамбль "Колледжаз".
 
 == Кылвер-влак ==
 * http://www.mrkkii.ru/ Колледжын сайтше
