*Empty MediaWiki Message*

--- a/Сапаев,_Эрик_Никитич.mw
+++ b/Сапаев,_Эрик_Никитич.mw
@@ -9,7 +9,7 @@
 
 Репрессий деч вара Эрикын аваже Вера Евдокимовна Сапаева йоча-влак дене пырля марийжын шочмо верышкыж, [[У Торъял кундем]] [[Чобык]] ялыш илаш куснен. Тыште Эрик школыш коштеш, пырдыжгазетым сӱретла, шуко лудеш.
 
-Йоча пагытыштак Эрик шкеак скрипке, гармонь, балалайка дене шокташ тунемын, марий сем-влакым нунын дене шоктен.
+Йоча пагытыштак Эрик шкеак скрипке, гармонь, балалайке дене шокташ тунемын, марий сем-влакым нунын дене шоктен.
 
 5-ше класс гыч Немда школыш тунемаш куснен. А 7 класс деч вара, ачажын корнышкыж шогалаш шонен пыштымеке, У Торъялысе педагогике училищыш тунемаш пура. Но [[1948]] ийыште [[Теле (пагыт)|телым]] тудын илышыже йӧршын вашталтеш.
 
