*Empty MediaWiki Message*

--- a/Англичан_йылме.mw
+++ b/Англичан_йылме.mw
@@ -1,6 +1,6 @@
-'''Аҥглычан йылме''' (аҥглычанла ''English'') — [[Индоевропысо йылме-влак|индоевропысо]] ([[Герман йылме-влак|герман]]) йылме.
+'''Англичан йылме''' (англичанла ''English'') — [[Индоевропысо йылме-влак|индоевропысо]] ([[Герман йылме-влак|герман]]) йылме.
 
-[[Категорий:Аҥглычан йылме]]
+[[Категорий:Англичан йылме]]
 [[Категорий:Герман йылме-влак]]
 
 [[ace:Bahsa Inggréh]]
