--- a/Лапта.mw
+++ b/Лапта.mw
@@ -4,7 +4,7 @@
 Команде дене модмо спортын видше.
 
 ==Эртымгорно==
-Лапта модмашым [[Россий]]ыште тӱжем ий наре палат.  Каласаш кӱлеш, ятыр кундемыште тыгайрак сынан модмаш лийын. Кажне кундемыште модмашын шке лӱмжӧ уло. Мутлан, аҥглычан калык – [[крикет]] манеш, амыркан-влак – [[бейсбол]], [[софтбол]] семын палат, кубин калык – [[пелота]], румын – [[ойма]] манын ойлат, финн-влак – [[песа пало]] дене модыт, а теве немыч-влак тиде модмашым [[шлагбал]] лӱмдат. [[Норвегий]]ысе археолог-влак викинг калыкын илыме верыштым шымленыт, да тушто лапта тоям кычал муыныт. 
+Лапта модмашым [[Россий]]ыште тӱжем ий наре палат.  Каласаш кӱлеш, ятыр кундемыште тыгайрак сынан модмаш лийын. Кажне кундемыште модмашын шке лӱмжӧ уло. Мутлан, англичан калык – [[крикет]] манеш, амыркан-влак – [[бейсбол]], [[софтбол]] семын палат, кубин калык – [[пелота]], румын – [[ойма]] манын ойлат, финн-влак – [[песа пало]] дене модыт, а теве немыч-влак тиде модмашым [[шлагбал]] лӱмдат. [[Норвегий]]ысе археолог-влак викинг калыкын илыме верыштым шымленыт, да тушто лапта тоям кычал муыныт. 
 Историйым шергалын палдарена, Совет ушемыште 1957 ийыште лапта дене икымше официальный модмаш эртен.
 Ик ий гыч – [[ССРУ]] кÿкшытысö чемпионат лийын.  Калыклан тиде модмаш моткоч келшен, да санденак тиде ийыштак тӱжем наре команде шочын.  [[1959]] ийыште лаптам РСФСР калыкын Спартакиаде программышкыже пуртеныт. Туге гынат [[1960]]-[[1970]] ийлаште лапта модмаш шке кушмашыжым да виянмашыжым чарна. Чаманен каласаш логалеш, лаптам пытартыш жапыште мондаш тӱҥалыныт ыле.
 Тыгодым шукерте огыл  Ростов олаште лапта дене Россий кӱкшытысӧ икымше таҥасымаш эртен.  А [[1995]] ийыште чемпионат деч вара лапта модмашын у радамым пенгыдемденыт. [[1997]] ий гыч регионгокласе мер организаций – Российысе руш лапта Федераций пашам ышташ тӱҥалын.
