*Empty MediaWiki Message*

--- a/Шоптырэҥер.mw
+++ b/Шоптырэҥер.mw
@@ -1,6 +1,6 @@
 '''Шоптырэнер''' [[У Роҥго кундем]] Вечын селасе администрацийыш пура. 
 
-Ял Вечын села деч йÿдвел-касвелке 7 менге тораште верланен. 
+Ял Вечын села деч йÿдвел-касвелке 7 меҥге тораште верланен. 
 
 Негызым Трубичата ял гыч толшо-влак пыштеныт. [[1869]]-ше ийыште 14 суртышто 47 пöръен да 96 ÿдырамаш иленыт гын [[2004]]-ше ийыште эртыше перепись почеш ялыште 3 сурт веле кодын. 
 
@@ -10,6 +10,6 @@
 
 Лÿмлö ен-влак: Кугу Ачаэл сарын участникше – Пётр Васильевич Леухин да молат. 
 
-Пурлыклан: Ронга энер, ялысе вер-шöр шотлалтыт.
+Пурлыклан: Ронга эҥер, ялысе вер-шöр шотлалтыт.
 
 [[Категорий:Илымверла Марий Элыште]]
