--- a/Эҥер.mw
+++ b/Эҥер.mw
@@ -1,7 +1,7 @@
 [[Файл:Malaya_Kokshaga_river.jpg|thumb|300px|[[Изи Какшан]] эҥер [[Йошкар-Ола]] деч ончыч]]
 '''Эҥер''' — [[пӱртӱс]]ын [[вӱд]] йогын. Эҥер вӱд йоген кайыме лаке {{comment|'''вӱдкорем'''|русло реки}}<ref>10-томан Марла-Рушла мутер</ref> але '''вӱдкорно''' але '''вӱдшер''' маналтеш. Вес эҥерыш але [[ер]]ыш але [[теҥыз]]ыш вола. Изиэҥер гыч, але памаш гыч але курык ий шулаш гыч тӱҥалеш.
 
-Кушто эҥер тӱҥалеш {{comment|'''вӱдмучаш'''|исток}} маналтеш але южгунам ''вӱдшинча'' да ''памашшинча''. Кушто эҥер пыта [[Аҥ (эҥер)|'''энер аҥ''']] маналтеш.
+Кушто эҥер тӱҥалеш {{comment|'''вӱдмучаш'''|исток}} маналтеш але южгунам ''вӱдшинча'' да ''памашшинча''. Кушто эҥер пыта [[Аҥ (эҥер)|'''эҥер аҥ''']] маналтеш.
 
 Эҥер кудыжо [[теҥыз]]ыш але [[ер]]ыш вола, '''тӱҥ эҥер''' маналтеш. Эҥер кудыжо вес эҥерыш вола {{comment|'''эҥерйолжо'''|приток}} маналтеш. Мутлан, [[Шур эҥер]] -- [[Юл]]ын эҥерйолжо улеш.
 
