*Empty MediaWiki Message*

--- a/Биатлон.mw
+++ b/Биатлон.mw
@@ -3,7 +3,7 @@
 Винтовкым вачыш сакалтен спортсмен ече дене куржеш. Ече корнын ик ужашыжым эртымеке, мишень марте куржын шуеш да лÿйкалаш тÿҥалеш. Эн тÿн нелылыкше – кок тÿрлö спорт тӱрлык-влакын ушымашыште. Сайын лÿйкалашлан кöргышто чон ласкалык лийышаш. А кунам икмныр меҥгым ече дене куржат, вӱр модеш, шӱм чот кыра, мишеньыш логалаш йӧсырак.
 == Эртымгорно ==
 1767 ийыыште [[Норвегий]]ыште у спорт таҥасымашым шонен луктыныт. Таҥасыше-влак ече дене курык гыч волат да тидын годым нунылан пычал гыч мишенышке логалман. Но тиде модмаш Норвегийыште гына лийын. Моло эл-влак тудын дене пайдаланен огытыл. 
-XX-шо курымын тÿҥалтышыштыже биатлон шке вийжым пога. Мутлан, иктаж 30-шо ийлаште  Йошкар Армийыште тыге [[салтак]]-влакым ямдыленыт. Нуно 50 менгым сар вургем да саркурал дене ечым чиен куржыныт.  Тиде куржталмаш эркын-эркын вашталтын, спорт таҥасымашыш савырнен. 
+XX-шо курымын тÿҥалтышыштыже биатлон шке вийжым пога. Мутлан, иктаж 30-шо ийлаште  Йошкар Армийыште тыге [[салтак]]-влакым ямдыленыт. Нуно 50 меҥгым сар вургем да саркурал дене ечым чиен куржыныт.  Тиде куржталмаш эркын-эркын вашталтын, спорт таҥасымашыш савырнен. 
 Моло эллаштыжат тыгай спорт шарлен. Мутлан, икымше Телымсе Олимпий Модмашыште (тудо [[1924]] ийыште Шамони олаште эртен) ече дене сар куршталмашат пурен. Но биатлон марте тудо эше кушкын шуын огыл. Иканаште икмыняр еҥ куржамашым тӱҥалыныт, вет армийыштыже патруль дене куржталыт. Но тиде спорт тӱрлыкм калык ужын, аклен. [[1957]] ийыште ече дене сар куршталмаш биатлоныш савырна. 
 [[Россий]] кӱкшытысӧ икымше биатлон чемпионат [[1957]] ийыштак Свердловск воктене  эртен. Икымше чемпионын лӱмжӧ – Владимир Маринычев. Тиде чемпионат биатлоным ончыко чот шӱкалын. 
 Ынде тиде спорт таҥасымаш  дене чемпионат-влак кажне ийын эртаралтыт.
