*Empty MediaWiki Message*

--- a/Гайана.mw
+++ b/Гайана.mw
@@ -18,7 +18,7 @@ PopDens=9,1|
 Government=[[республик]]|
 CreateDate=[[1822]]|
 
-OfLangs=[[аҥгличан йылме|аҥгличан]]|
+OfLangs=[[англичан йылме|англичан]]|
 HoSTtl=[[Президент]]|
 HoSNm=[[Бхаррат Джагдео]]|
 
