--- a/Белиз.mw
+++ b/Белиз.mw
@@ -18,7 +18,7 @@ PopDens=15|
 Government=[[монархия]]|
 CreateDate=[[1981]]|
 
-OfLangs=[[аҥгличан йылме|аҥгличан]]|
+OfLangs=[[англичан йылме|англичан]]|
 HoSTtl=[[Премьер-министр]]|
 HoSNm=[[Дин Барроу]]|
 
