*Empty MediaWiki Message*

--- a/Тринидад_да_Тобаго.mw
+++ b/Тринидад_да_Тобаго.mw
@@ -18,7 +18,7 @@ PopDens=215|
 Government=[[республика]]|
 CreateDate=[[1962]]|
 
-OfLangs=[[аҥгличан йылме|аҥгличан]]|
+OfLangs=[[англичан йылме|англичан]]|
 HoSTtl=[[Президент]]|
 HoSNm=[[Джордж Ричардс]]|
 
