*Empty MediaWiki Message*

--- a/N-грам.mw
+++ b/N-грам.mw
@@ -3,7 +3,7 @@
 N-грам - тиде тыгай почелалык-влакыште могай шушышо тӱҥлык лиеш тогыдаяшлан вероятностян модель. n-грам тӱрлӧ {{comment|иктешлымашан|статистический}} [[илыше йылмым процесслымаш|илыше йылмым процесслыме]] модель-влакыште кучалталтеш.
 
 ==Мутлан==
-Ӱлнӧ, мутлан, аҥгличан йылмелан Google n-грам корпус гычын мут йыжыҥан 3-грамм да 4-грамм-влак (логалше чот дене)<ref>http://googleresearch.blogspot.com/2006/08/all-our-n-gram-are-belong-to-you.html</ref>:
+Ӱлнӧ, мутлан, англичан йылмелан Google n-грам корпус гычын мут йыжыҥан 3-грамм да 4-грамм-влак (логалше чот дене)<ref>http://googleresearch.blogspot.com/2006/08/all-our-n-gram-are-belong-to-you.html</ref>:
 
 *ceramics collectables collectibles (55)
 *ceramics collectables fine (130)
