*Empty MediaWiki Message*

--- a/Компьютер.mw
+++ b/Компьютер.mw
@@ -1,1 +1,223 @@
-#REDIRECT [[Компучыр]]
+[[Файл:Columbia Supercomputer - NASA Advanced Supercomputing Facility.jpg|240px|thumb|NASA Ames Шымлымаш Рӱдерыште верланыше Columbia суперкомпьютер.]]
+'''Компьютер''' ({{lang-en|computer|}} гыч - шотлышо) — [[информаций]]ым налын саклыше, йондартыше да пайдаланышылан кӱлшӧ сын дене луктын пуышо программлыме машин.
+
+Компьютерын механикле вариантше-влак (механикле сынан компьютер) айдеме тукымын чумыр возалтше эртыкше мучко палдырнышт гынат, икымше электрон компьютер-влак [[XX курым]] кыдалне (1940-1945) ворандаралтыч. Нуно посна пӧлем кугытан лийыныт. Нуно электричествым кызытсе компьютер деч таҥастарымаште икмыняр тӱжем пачаш утла шукерак кочкыныт<ref>1946 ийыште ENIAC 178 кВт электричествым кочкен, кызытсе laptop компьютерлан 20 Вт веле кӱлеш. {{Аҥгл важ}} [http://www.upenn.edu/computing/provider/docs/hardware/powerusage.html Approximate Desktop & Notebook Power Usage]</ref>. Кызытсе компьютерлан интегральный схема негызым пышта. Тудлан кӧра кызытсе компьютер-влак ончычсо компьютер-влак деч [[амион]]-[[камысыр]] пачаш кугурак лектышым пуышо улыт да палынак изи верым налыт. Куштылго компьютер тыгай изи, тудым изи кӱсен устройствыш чыкаш лиеш. Информационный курымышто персональный компьютер юмоҥа гае, шукышт персональный компьютерым ''компьютер'' маныт. Туге гынат, MP3-плеер гыч тӱҥалын сар [[кÿртньыгайык]] марте, модыш гыч тӱҥалын йӧнозанлык робот марте, кӧргыштыме (embedded) компьютер-влак утларак улыт.
+
+Инструкций лӱмерым шарнен кертмаш да тудым ыштен шуктмаш компьютерым шукышӧрынаным ыштен, [[калькулятор]] дечын ойырен. Инструкций лӱмер [[программе]] маналтеш. [[Чӧрч-Тӱринг тезис]] тиде шукышӧрынан улмыжым математик семын умылтара: кеч-могай эн изи кертмаш дене компьютер керек-могай вес компьютер семын тыгаяк сомылым ыштен кертеш. Садлан ситыше жапым да шарнымверым (storage) пуаш гын, вапшбук гычын тӱҥалын кугукомпьютер марте икгай шотлымаш сомылым чыланат ыштен кертыт.
+
+== Компьютерын эртыкше ==
+[[Файл:Jacquard.loom.full.view.jpg|thumb|Шанче да йӧнозанлык тоштерыште, [[Манчестер]]ыште, [[Кугу Британий]]ыште [[Джакӱардын куымо станже]]. Икымше программирований кертмаш дене устройстве-влак коклаште тиде станже икте улеш.]]
+
+Икымше гана «компьютер» мутым [[Аҥгличан йылме|аҥгличан йылмыште]]  [[1613]] ийыште ойленыт. Тунам шотлымашым вуйлатыше айдемым тыге маныныт. XX курым пелыштыже марте компьютер мутым туге кученыт. [[XIX курым]] мучаште компьютер мут дене шотлымашым ыштыше машинам манаш тӱҥалыныт.
+
+Тачысе компьютерлан кок посна [[технологий]] негызым пыштен. Икымше — автоматик шотлымаш, кокымшо — программлымаш кертмаш (кунам ӱзгарлан программым пуаш лиеш). Но эреак ыштылтше тыгай ик пӱтынь устройстве уке ыле. Механикле автоматикле шотлымаш ӱзгарлан [[Абакус]] шотлалтеш але [[логарифмический линейке]], [[Астролаб]] але [[Антикитерын механизмже]] (150–100 мемна курым деч ончыч). [[Херон]] 10-70 ийлаште механикле театрым чонен. Тиде театр айдеме деч посна шке 10 минутан представленийжым ыштен. Представленийжым кугу кандра ден кышкар радамлык вуйлатен. Тыгай механзм могай ужашлан кунам да могайым сомылым ыштыман рашемдыме йӧн гай шотлалтен кертеш. Тыгай койыш программлымаш кертмаш маналтеш, тиде программлымаш кертмашын ыҥже.
+
+Икымше программлыме (программлымаш кертмаш дене) аналог компьютерлан «Полат шагат» — [[астрономий шагат]] шотлалтеш<ref name="Ancient Discoveries">{{Аҥгл важ}}Ancient Discoveries, Episode 11: Ancient Robots. History Channel.</ref>. Тудым Аль-Джазари 1206 ийыште чонен луктын. Тудо [[зодиак]]ын, кечын да тылзын орбитым, [[Тылзын фазе|тылзын фазым]] ончыктен. Тылзын фазым ончыктышо капкам йыр пӧрдалыме. Кажне шагатыште автоматическе омса почмо. Визыт [[Робот|робо]]-мурызо-влак семым шоктышт. [[Пайлыше вал]] деч [[вӱдорва]] дене [[ваге]] ушна. Кунам ваге пера, тунам робо-мурызо семым шокташ тӱҥала. Ийын кече да йӱд кужытшо почеш ӱзгарын кече да йӱд кужытшым программироватьляш лиеш ыле.
+
+Реннесанс жапже Йывропысо математиклан да шонен чонымашлан у вийым пуэн. [[1623]] ийыште [[Вильгельм Шыкард]] икымше йывропысо механикле калькулыторым шонен луктыш. Тудо программлымаш кертмешетдыме ыле, садлан компьютер семын тудым лӱмдаш ок лий.
+
+[[1801]] ийыште [[Жозеф Мари Джакӱард]] [[куымо стан]]ыш у йӧным пуртен. Тудын станже [[рожан лаштык]]ым ямдылык семын кучылтен. Садлан станже йӧсӧ ярныкте сӱретым автоматик семын куаш кертын. Тачысе компьютер чонымаш корнышто тыгай Джакӱардын станже кӱлешан ошкыл улеш. Тыгай рожан лаштыкым кучымаш, эреак программлымаш кертмаш семын шотлалтен кертеш.
+
+[[1837]] ийыште [[Чарлз Бэббидж]] икымше тӱрыс программлыме механикле компьютерым шонен луктын.Тудо [[лончылыше машина]] маналтеш<ref>Лончылыше машинам Беббиджын [[дифференциалымаш машина]] дене товаҥаш огеш кӱл. Дифференциалымаш машина программлымаш кертмашдыме.</ref>. Но Беббиджын оксаже шуго огыл, садлан Беббидж тиде машинам ыштен пытарен огыл.
+
+[[1880]] ийла тӱҥалтышыште, [[Герман Холерис]] данныйым шарнен моштымашын шонен луктын. Тудо деч ончыч, {{comment|вуйлатыше шӱдыкым|управляющие команды}} гына шарненыт. «Икмыняр кагаз лента дене шынымаш деч вара, тудо рожан лаштыкыште чарнен…»<ref>[http://www.columbia.edu/acis/history/hollerith.html Колумбий университет. Компучырлашын эртыкше: Герман Холерис.]</ref>. Тиде рожан лаштыкым пайдалашлан тудо [[табулятор]]ым да [[рожым-ыштыше кид-машина]]м шонен луктын. Тиде кум ӱзгар вара информациым пайдаланымаш озанлыклан негызым пыштен. [[1890 ийын АУШ калыкчотше|1890 ийын АУШ калыкчотшым]] ыштыме годым Холерисын компанийже кугу автоматикле шотлымашым ыштен. Тиде компаний варжым [[IBM]]-лан негызым пыштен. XIX курым мучаште икмыняр шонен луктымаш-влак лектыме: [[рожан лаштык]], [[булев алгебра]], [[вакуум лампе]] да [[телетайп]]. Тиде шонен лукмаш-влак компьютерын чонымашыжын кӱлешлыкыжым чынленыт.
+
+[[XX курым]]ын тӱҥалтыш пелештышыште, шуко шанче шотлымаш сомылым [[аналог шотлышо|аналог компьютерын]] полшыкше дене рашемденыт. Тугодым тыгай компьютер-влак уста лийыныт, модельже механикле але электрическе радамлыкыште ышталтыме. Туге гынат программлымаш кертмашыже уке ыле. Да тачысе компьютер-влак дене таҥастараш гын, шукышӧрынан улмыже ок сите ыле.
+
+Алан Тӱринг кумдан палыме тачысе [[Шотлышо шанче|компьютер шанчын]] ачаже. 1936 ийыште {{comment|сеҥышоян|влиятельный}} [[алгоритм]] {{comment|умылтышым|концепцийым}} возен да [[Тӱринг машина]] дене шотлымашым шонен луктык. Time журнал Алан Тӱрингым [[XX курымыште эн кӱлешан 100 айдеме лӱмер]]ыш пуртымаш нерген тыге каласен:
+<blockquote>
+Тыгай факт уло: клавиатурышто возышо але электронне четлыкым але текст-процессор программым почышо кажне еҥ Тӱринг машинан воплощенийже дене пашам ышта<ref>{{Аҥгл важ}} Alan Turing — Time 100 People of the Century</ref>.
+</blockquote>
+
+Конрад Дзӱзе (Konrad Zuse) программе почеш вуйлытыме компьютерым шонен луктын, [[1941]] ийыште икымше ыштыше шотлышым чонен, да [[1955]] ийыште икымше магнитне шарнывер дене компьютерым чонен.<ref>{{Немыч важ}} [http://www.spiegel.de/netzwelt/gadgets/0,1518,651776,00.html Spiegel: Компьютер биографийын авторжо савыктыме]</ref>
+
+Тачысе {{comment|шотпалын|цифровой}} компьютерлан [[Джордж Стибиц]] негызым пыштен. Тудо Bell Labs-ыште пашам ыштен. [[1937]] ийыште [[Теле]] тылзыште реле дене негызлыме калькуляторым чонен («Model K» маналтеш). Тиде калькулятор арифметике операцийым шотлашлан [[кокытан шотпал радамлык]]ым кучылтмо икымше калькулятор семын шотлалтеш. Тиде технологий тачысе шотлышелан негызым пыштен.
+
+{{Эреак ышталтше шотлышын ойыртышыже}}
+
+1930 да 1940 ийлаште эре виямдыме да ӱшанлыме шотлышо устройсте радам чонымо, тачысе компьютерыште койшо сын-кун-влак (feature) ошкыл-ошкыл дене ешарыме. Цыпр электроникым пайдаланымаш (1937 ийыште Клод Шеннон палынак шонен луктын), ӱшанлырак программирований кертмаш пеш кӱлешан ошкыл-влак 
+улыт, но тиде корнышто «икымше цыпр электронле компьютерлан». иктым ойырен налаш неле. Шерге сеҥымаш-влак:
+
+[[Файл:EDSAC (10).jpg|thumb|right|200px|[[EDSAC]] — шарныме программым ышталтыше икымше компьютер-влак коклаште икте улеш ([[вон Нейманын архитектурыже]]).]]
+[[Файл:80486dx2-large.jpg|thumb|right|200px|[[Intel 80486DX2]] [[микропроцессор]]ын кристалже (шке кугытшо: 12×6.75&nbsp;мм)]]
+
+* Конрад Зӱсын (Zuse) электро-механикле «Z-машина-влак». Z3 (1941) — икымше ыштыше, кокытан арипметикым ворандарыше машин, вещественле арипметик да изиш программлымаш кертмаш дене.<ref>{{Аҥгл важ}} IEEE Annals of the History of Computing, Raúl Rojas «How to make Zuse's Z3 a universal computer», 1998 ий, 20 том, 3 номеран, 51–54 лаштык-влак</ref>
+* Программлымаш кертмашдыме Атанасофын-Берийын шотлышыжо 1941. Шотлымаш вакуумле пучыште ыштыме, кокытан шотпал радамлык да электричественле емкостьым палдарыше шарнымаш кучылтмо. Тыгай шарнымаш изи компьютерым ышташ полшен (кугу ӱстел кугытан). Кокласе лектышым шарнымаште саклаш лиеш, да вара тудым тыгайже шотлышо тӱҥлыкыш мӧнгешла пӧртылаш.
+* Шолып Британийын Колосус компьютер-влак (1943)<ref>B. Jack Copeland, ed., Colossus: The Secrets of Bletchley Park's Codebreaking Computers, Oxford University Press, 2006</ref> чартыме программлымаш кертмаш дене лийын. Тӱжем пучым кычышо устройстве ӱшанле да электронле программлыме лийын кертеш — тидым ончыктыш. Тудым Германийын сар годсе код-влакым пудырташлан ворандареныт.
+* Харвард Марк I (1944), кугу-кертмашан электронле-механикле чартыме программлымаш кертмаш дене компьютер.
+* АУШ армийын Баллистике Шымлымаш Лабораторий ENIAC (1946). Тудо луан арипметикым кучылтен. Тудым южгунам икымше кумдатӱран (general puprose — общего назначения) электронле компьютер маныт (Конрад Зӱсын Z3 компьютер 1941 ийыште электроник олмеш электромагнитизмым кучен). Тӱҥалме годым тудо пеш лывыргедыме архитектурым кучен, программым вашталташлан воштырым ик вер гыч вес верыш кусараш кӱлеш ыле.
+
+...
+
+== Важ-влак ==
+<references />
+
+[[Категорий:Компучырлаш]]
+
+[[ace:Komputer]]
+[[af:Rekenaar]]
+[[als:Computer]]
+[[am:ኮምፒዩተር]]
+[[an:Ordinador]]
+[[ang:Spearcatella]]
+[[ar:حاسوب]]
+[[arc:ܚܫܘܒܐ (ܡܐܟܢܐ)]]
+[[arz:كومبيوتر]]
+[[as:কম্পিউটাৰ]]
+[[ast:Computadora]]
+[[az:Kompyuter]]
+[[ba:Компьютер]]
+[[bar:Rechna]]
+[[bat-smg:Kuompioteris]]
+[[be:Камп'ютар]]
+[[be-x-old:Кампутар]]
+[[bg:Компютър]]
+[[bn:কম্পিউটার]]
+[[bo:གློག་ཀླད།]]
+[[bpy:কম্পিউটার]]
+[[br:Urzhiataer]]
+[[bs:Računar]]
+[[bug:Komputer]]
+[[ca:Ordinador]]
+[[ce:ГIулкхдириг]]
+[[ceb:Kompiyuter]]
+[[cs:Počítač]]
+[[cu:Съмѣтатєл҄ь]]
+[[cv:Компьютер]]
+[[cy:Cyfrifiadur]]
+[[da:Computer]]
+[[de:Computer]]
+[[diq:Komputer]]
+[[el:Ηλεκτρονικός υπολογιστής]]
+[[eml:Zarvlån]]
+[[en:Computer]]
+[[eo:Komputilo]]
+[[es:Computadora]]
+[[et:Arvuti]]
+[[eu:Ordenagailu]]
+[[fa:رایانه]]
+[[fi:Tietokone]]
+[[fiu-vro:Puutri]]
+[[fo:Teldur]]
+[[fr:Ordinateur]]
+[[fur:Ordenadôr]]
+[[fy:Kompjûter]]
+[[ga:Ríomhaire]]
+[[gan:電腦]]
+[[gd:Coimpiutaireachd]]
+[[gl:Ordenador]]
+[[got:𐍅𐌹𐍄𐌹𐍂𐌰𐌷𐌽𐌾𐌰𐌽𐌳𐍃/Witirahnjands]]
+[[gu:કમ્પ્યૂટર]]
+[[gv:Co-earrooder]]
+[[ha:Na'ura]]
+[[hak:Thien-nó]]
+[[he:מחשב]]
+[[hi:कम्प्यूटर]]
+[[hif:Computer]]
+[[hr:Računalo]]
+[[ht:Òdinatè]]
+[[hu:Számítógép]]
+[[hy:Համակարգիչ]]
+[[ia:Ordinator]]
+[[id:Komputer]]
+[[ig:Orunotu]]
+[[ilo:Kompiuter]]
+[[io:Ordinatro]]
+[[is:Tölva]]
+[[it:Computer]]
+[[iu:ᖃᕋᓴᐅᔭᖅ/qarasaujaq]]
+[[ja:コンピュータ]]
+[[jbo:skami]]
+[[jv:Komputer]]
+[[ka:კომპიუტერი]]
+[[kg:Ludinatelo]]
+[[kk:Компьютер]]
+[[km:កុំព្យូទ័រ]]
+[[kn:ಗಣಕಯಂತ್ರ]]
+[[ko:컴퓨터]]
+[[krc:Компьютер]]
+[[ku:Komputer]]
+[[kw:Comptyor]]
+[[ky:ЭЭМ]]
+[[la:Computatrum]]
+[[lad:Contador]]
+[[lb:Computer]]
+[[li:Computer]]
+[[lmo:Cumpiüter]]
+[[ln:Esálela]]
+[[lo:ຄອມພິວເຕີ]]
+[[lt:Kompiuteris]]
+[[lv:Dators]]
+[[mg:Mpikajy]]
+[[mk:Сметач]]
+[[ml:കമ്പ്യൂട്ടർ]]
+[[mn:Компьютер]]
+[[mr:संगणक विज्ञान]]
+[[ms:Komputer]]
+[[mt:Kompjuter]]
+[[mwl:Cumputador]]
+[[my:ကွန်ပျူတာ]]
+[[myv:Арси машинась]]
+[[mzn:رایانه]]
+[[nah:Chīuhpōhualhuaztli]]
+[[nap:Computer]]
+[[nds:Reekner]]
+[[nds-nl:Komputer]]
+[[ne:कम्प्युटर]]
+[[new:कम्प्युटर]]
+[[nl:Computer]]
+[[nn:Datamaskin]]
+[[no:Datamaskin]]
+[[nv:Béésh bee akʼeʼelchíhí tʼáá bí nitsékeesígíí]]
+[[oc:Ordinator]]
+[[or:କମ୍ପ୍ୟୁଟର]]
+[[pa:ਕੰਪਿਊਟਰ]]
+[[pam:Computer]]
+[[pl:Komputer]]
+[[pnb:کمپیوٹر]]
+[[ps:سولګر]]
+[[pt:Computador]]
+[[qu:Antañiqiq]]
+[[ro:Calculator]]
+[[ru:Компьютер]]
+[[rue:Компютер]]
+[[sah:Көмпүүтэр]]
+[[sc:Elaboradore]]
+[[scn:Computer]]
+[[sco:Computer]]
+[[sh:Kompjuter]]
+[[si:පරිගණකය]]
+[[simple:Computer]]
+[[sk:Počítač]]
+[[sl:Računalnik]]
+[[so:Kumbuyuutar]]
+[[sq:Kompjuteri]]
+[[sr:Рачунар]]
+[[stq:Computer]]
+[[sv:Dator]]
+[[sw:Tarakilishi]]
+[[ta:கணினி]]
+[[te:కంప్యూటర్]]
+[[tg:Компутар]]
+[[th:คอมพิวเตอร์]]
+[[tk:Kompýuter]]
+[[tl:Kompyuter]]
+[[tr:Bilgisayar]]
+[[tt:Санак]]
+[[uk:Комп'ютер]]
+[[ur:شمارِندہ]]
+[[uz:Kompyuter]]
+[[vec:Computer]]
+[[vi:Máy tính]]
+[[vls:Computer]]
+[[wa:Copiutrece]]
+[[war:Kompyuter]]
+[[wo:Nosukaay]]
+[[wuu:计算机]]
+[[xh:Ikhompyutha]]
+[[yi:קאמפיוטער]]
+[[yo:Kọ̀mpútà]]
+[[za:Dennauj]]
+[[zh:電子計算機]]
+[[zh-min-nan:Tiān-náu]]
+[[zh-yue:電腦]]
