*Empty MediaWiki Message*

--- a/3_шорыкйол.mw
+++ b/3_шорыкйол.mw
@@ -7,7 +7,7 @@
 * Феофан
 * Юлиания
 == Мо лийын ==
-* [[1431]] – Бургундий герцог Жанна Д’арк лӱман француз талешке-ӱдырым 10 000 франк оксалан аҥгличан-влаклан ужален.
+* [[1431]] – Бургундий герцог Жанна Д’арк лӱман француз талешке-ӱдырым 10 000 франк оксалан англичан-влаклан ужален.
 * [[1888]] – [[Вашингтон]] олаште М.Стоун коктель йӱымӧ олымпырчылан патентым налын. Тунам тыгай олымпырчым кагаз гыч ыштеныт.
 * [[1905]] – Путиловский заводын пашаеҥже-влак забастовкым тӱҥалыныт.
 * [[1924]] – [[Тутанхамон фараон]]ын пирамидыжым муымеке британ экспедиций тӱҥ поянлыкшым – фараонын саркофагшым муыныт. Февраль тылзыште саркофагым почыныт - кӧргыштӧ мумийын шӧртньӧ колоткажым муыныт.
@@ -21,7 +21,7 @@
 === Моло-влак ===
 * 106 м.к.д.о. — Марк Туллий Цицерон, рим оратор, философ и политик пашаеҥ (43-шо м.к.д.о. колен).
 * [[1744]] — Ипполит Фёдорович Богданович, руш поэт (1803 ийыште колен).
-* [[1892]] — Джон Рональд Руэл Толкин — аҥгличан серызе, лингвист, филолог, тӱнямбал пагалымашым сулен налше "Властелин колец" трилогийын авторжо. (1973 колен).
+* [[1892]] — Джон Рональд Руэл Толкин — англичан серызе, лингвист, филолог, тӱнямбал пагалымашым сулен налше "Властелин колец" трилогийын авторжо. (1973 колен).
 * [[1906]] — Алексей Григорьевич Стаханов, Стаханов толкынлан тӱҥалтышым пуышо пашаеҥ (1977 колен).
 * [[1929]] — Серджио Леоне, итальян кинорежиссёр, спагетти-вестерн жанрым шонен лукшо; «Однажды в Америке» --- эн сайын палыме фильмже (1989 колен) .
 * [[1936]] — Николай Михайлович Рубцов, руш поэт (1971 колен).
