*Empty MediaWiki Message*

--- a/Мӱзикыл.mw
+++ b/Мӱзикыл.mw
@@ -4,7 +4,7 @@
 Формо дене мӱзикыл эн чӱчкыдын кок акт гыч шогышо спектакль семын лиеш.
 == Эртымгорно ==
 === Кузе шочын ===
-Мӱзыкыл шочмо деч ончыч сценын ятыр "куштылго" жанр-влакше пырля варалтыныт: варьете, француз балет, драме интерлюдий. 1866 ийыште [[Идым]] тылзын «Black Crook» постановко эртен - романтик балет, мелодраме, моло жанр-влак тыште варалтыныт. Тудымак у мӱзикыл жанрын тӱҥалтышыжлан шотлалтеш. Аҥгличан продюсер Джордж Эдвардс "Хористка" хитшым музык комедий семын лӱмден. Музык комедийыште тӱҥ - сюжет огыл. Тӱн - йӧратыме мурымаш номер-влак. Эн йӧратыме мурызо-влак йоҥгалтареныт. Эдвардсын постановкыжо-влак Нью-Йоркышто моткоч чот келшеныт, сандене XX-шо курым тӱҥалтыш марте мӱзикыл жанрыште чылан аҥгличан-влак почеш ошкылыныт.
+Мӱзыкыл шочмо деч ончыч сценын ятыр "куштылго" жанр-влакше пырля варалтыныт: варьете, француз балет, драме интерлюдий. 1866 ийыште [[Идым]] тылзын «Black Crook» постановко эртен - романтик балет, мелодраме, моло жанр-влак тыште варалтыныт. Тудымак у мӱзикыл жанрын тӱҥалтышыжлан шотлалтеш. Англичан продюсер Джордж Эдвардс "Хористка" хитшым музык комедий семын лӱмден. Музык комедийыште тӱҥ - сюжет огыл. Тӱн - йӧратыме мурымаш номер-влак. Эн йӧратыме мурызо-влак йоҥгалтареныт. Эдвардсын постановкыжо-влак Нью-Йоркышто моткоч чот келшеныт, сандене XX-шо курым тӱҥалтыш марте мӱзикыл жанрыште чылан англичан-влак почеш ошкылыныт.
 
 == Америкыште шыҥдаралтмаш ==
 [[Файл:AndrewLloydWebber2.jpg|200px|thumb|Эндрью Ллойд Уэббер [[семлызе]]. Эн шерге да ик эн лӱмлӧ мӱзикыл-влакым возышо.]]
