*Empty MediaWiki Message*

--- a/Иванова,_Альбертина_Петровна.mw
+++ b/Иванова,_Альбертина_Петровна.mw
@@ -10,7 +10,7 @@
 
 1988 ийыште [[Олык Ипай лӱмеш кугыжаныш премийын лауреатше]] лийын.
 
-[[2003]]-шо ий гыч "Савыктыш пöрт" ИМУ-м (ООО "Издательский дом") вуйлата. Икымше почеламутшо-влакым 1970-шо ийлаште серен. «Кечан эрдене» лӱман почеламут книгаже [[1976]]-шо ийын тÿням ужын. Тиддеч вара «Каласынем тылат» (1982), «Шинчаваш ончен» (1988), «Тылат» (1994), «Тенге йнäгем йыла» (1999) лектыныт. Почеламутшо-влакым руш, поляк, немыч, аҥгличан, финн, эстон, туркмен, кукмарий, одо, суас йылмыш кусарыме. [[Йошкар-Ола]]ште ила.
+[[2003]]-шо ий гыч "Савыктыш пöрт" ИМУ-м (ООО "Издательский дом") вуйлата. Икымше почеламутшо-влакым 1970-шо ийлаште серен. «Кечан эрдене» лӱман почеламут книгаже [[1976]]-шо ийын тÿням ужын. Тиддеч вара «Каласынем тылат» (1982), «Шинчаваш ончен» (1988), «Тылат» (1994), «Тенге йнäгем йыла» (1999) лектыныт. Почеламутшо-влакым руш, поляк, немыч, англичан, финн, эстон, туркмен, кукмарий, одо, суас йылмыш кусарыме. [[Йошкар-Ола]]ште ила.
 
 === Кунам каем, шке ныжылгылыкем ден. ===
 <poem>
