*Empty MediaWiki Message*

--- a/Википедий.mw
+++ b/Википедий.mw
@@ -1,5 +1,5 @@
 [[Файл:Multilingual Wikipedia logo.gif|right]]
-'''Википе́дий''' ({{lang-en|Wikipedia}}) — эрыкан, пырля ыштыме шукойылман [[энциклопедий]] [[Интернет|интернетыште]]. Тиде проектлан [[Wikimedia Foundation]] оксам пуа. Лӱмжӧ кок мут гыч шога: ''[[вики]]'' ([[технологий]] сайт-влакым пырля ышташ лан), да ''энциклопедий''. Кумылзо-влак чыла тӱняште Википедийын 13 [[амион]] статьяжым пырля возеныт. Кызыт кажне еҥ интернет гоч Википедийыш пурен кертеш гын чыла лаштык гаяк тӧрлатен кертеш. Аҥгличан Википедий [[2001 ий|2001 иыйште]] Jimmy Wales да Larry Sanger почылтеныт. Кызыт Википедий эн кугу да эн палыме энциклопедий интернетыште.
+'''Википе́дий''' ({{lang-en|Wikipedia}}) — эрыкан, пырля ыштыме шукойылман [[энциклопедий]] [[Интернет|интернетыште]]. Тиде проектлан [[Wikimedia Foundation]] оксам пуа. Лӱмжӧ кок мут гыч шога: ''[[вики]]'' ([[технологий]] сайт-влакым пырля ышташ лан), да ''энциклопедий''. Кумылзо-влак чыла тӱняште Википедийын 13 [[амион]] статьяжым пырля возеныт. Кызыт кажне еҥ интернет гоч Википедийыш пурен кертеш гын чыла лаштык гаяк тӧрлатен кертеш. Англичан Википедий [[2001 ий|2001 иыйште]] Jimmy Wales да Larry Sanger почылтеныт. Кызыт Википедий эн кугу да эн палыме энциклопедий интернетыште.
 
 Изи [[Калык|калыклан]] Википедий кугу ӱзгар улеш [[Йылме|йылмым]] аралаш да [[Йӱла|йӱлам]] ышташ.
 
