*Empty MediaWiki Message*

--- a/Калык-влак_кокласе_Ий_хоккей_федераций.mw
+++ b/Калык-влак_кокласе_Ий_хоккей_федераций.mw
@@ -1,7 +1,7 @@
 '''Калык-влак кокласе Ий хоккей федераций''', '''Калык-влак кокласе Шайбан хоккей федераций''' ({{lang-en|International Ice Hockey Federation, IIHF}}, {{lang-fr|Fédération internationale de hockey sur glace}}) — [[шайбан хоккей]], [[инлайн-хоккей]], ролик коньки дене модмо [[хоккей]] шотышто пашам да йодыш-влакым эскерыше калык-влак кокласе ушем.
 Уло тӱня мучко тудын пашаже шарла гынат, садыгак, [[США]]ште да [[Канада|Канадыште]] ИИХФшке уло вийжым ончыктен огеш керт, тушто эн кугу да эн виян хоккей ушемлан [[Националле хоккей лиге]] (НХЛ) шотлалтеш. Канаде ден США гына, ИИХФшке пурен, шке виктарчыкыштым шотышко налыт<ref name="statem">{{cite web|url=http://www.statemaster.com/encyclopedia/International-Ice-Hockey-Federation|title=International Ice Hockey Federation|description=Калык-влак кокласе шайбан хоккей федераций|publisher=StateMaster.com|lang=en|accessdate=2010-04-12}}</ref>.
 
-Официалле лӱм-влакым пуртымо шотышто тӱрлӧ ийым палемдат - аҥгличан йылме 1920, 1978<ref name="ydict">{{cite web|url=http://slovari.yandex.ru/dict/hockey/article/ho1/ho1-0909.htm|title=МЕЖДУНАРОДНАЯ ФЕДЕРАЦИЯ ХОККЕЯ НА ЛЬДУ (ИИХФ)|publisher=Хоккей. Кугу энциклопедий|lang=ru|accessdate=2010-04-12}}</ref>, 1946<ref>{{cite web|url=http://hockey365.celeonet.fr/hockeyarchives/mondial1947.htm|title=Championnats du monde 1947|publisher=HockeyArchives|lang=fr|accessdate=2010-04-19}}</ref>, немыч йылме 1954<ref name="h1957">{{cite web|url=http://www.iihf.com/iihf-home/history/the-iihf/epochs/1957-1974.html|title=1957—1974|publisher=Калык-влак кокласе шайбан хоккей федераций|lang=en|accessdate=2010-04-12}}</ref>. 
+Официалле лӱм-влакым пуртымо шотышто тӱрлӧ ийым палемдат - англичан йылме 1920, 1978<ref name="ydict">{{cite web|url=http://slovari.yandex.ru/dict/hockey/article/ho1/ho1-0909.htm|title=МЕЖДУНАРОДНАЯ ФЕДЕРАЦИЯ ХОККЕЯ НА ЛЬДУ (ИИХФ)|publisher=Хоккей. Кугу энциклопедий|lang=ru|accessdate=2010-04-12}}</ref>, 1946<ref>{{cite web|url=http://hockey365.celeonet.fr/hockeyarchives/mondial1947.htm|title=Championnats du monde 1947|publisher=HockeyArchives|lang=fr|accessdate=2010-04-19}}</ref>, немыч йылме 1954<ref name="h1957">{{cite web|url=http://www.iihf.com/iihf-home/history/the-iihf/epochs/1957-1974.html|title=1957—1974|publisher=Калык-влак кокласе шайбан хоккей федераций|lang=en|accessdate=2010-04-12}}</ref>. 
 Кызыт ИИХФ Уставын 8 статьяж почеш ик официал йылме гына уло - англичан йылме, но ты годым немыч да руш йылмылашке синхрон кусарымаш лийшашак.<ref>{{cite web|url=http://www.iihf.com/fileadmin/user_upload/PDF/The_IIHF/2008-2012_IIHF_Statutes_and_Bylaws.pdf|title=Устав ИИХФ|publisher=Калык-влак кокласе шайбан хоккей федераций|lang=en|accessdate=2010-04-12}}</ref>. Француз йылмым 1908 ийысе Конгрессыште официал йылмылан сайленыт, но чынжым, тачысе кечын тудо официалле лӱмлан ок шотлалт.
 == Шонымаш да паша ==
 Тӱҥ паша:
