*Empty MediaWiki Message*

--- a/Ушымо_Королевстве.mw
+++ b/Ушымо_Королевстве.mw
@@ -21,7 +21,7 @@ PopDens=247|
 Government=[[юго тӱҥтӧртык кугыжаэл]]|
 
 
-OfLangs=[[Аҥгличан йылме|аҥгличан]]|
+OfLangs=[[Англичан йылме|англичан]]|
 RegLangs=[[Валлий йылме|валлий]], [[Ирланд йылме|ирланд]], [[Улстер-скот йылме|улстер-скот]], [[Шотланд йылме|шотланд]], [[Корн йылме|корн]]|
 
 HoSTtl=[[Кугыжа]]|
@@ -47,7 +47,7 @@ Anthem=[[God Save the Queen]]|
 Motto=Dieu et mon droit
 }}
 
-'''Кугу Британий''' ([[Аҥгличан йылме|аҥгличан]]: ''Great Britain'') — [[Европо|Европысо]] [[эл]].
+'''Кугу Британий''' ([[Англичан йылме|англичан]]: ''Great Britain'') — [[Европо|Европысо]] [[эл]].
 
 {{Европо Ушем}}
 {{Европо}}
