*Empty MediaWiki Message*

--- a/Барбадос.mw
+++ b/Барбадос.mw
@@ -18,7 +18,7 @@ PopDens=660|
 Government=[[монархия]]|
 CreateDate=[[1966]]|
 
-OfLangs=[[аҥгличан йылме|аҥгличан]]|
+OfLangs=[[англичан йылме|англичан]]|
 HoSTtl=[[Премьер-министр]]|
 HoSNm=[[Фреандел Стюарт]]|
 
