--- a/Ямайка.mw
+++ b/Ямайка.mw
@@ -18,7 +18,7 @@ PopDens=252|
 Government=[[монархия]]|
 CreateDate=[[1981]]|
 
-OfLangs=[[аҥгличан йылме|аҥгличан]]|
+OfLangs=[[англичан йылме|англичан]]|
 HoSTtl=[[Премьер-министр]]|
 HoSNm=[[Брюс Голдинг]]|
 
