--- a/Гренада.mw
+++ b/Гренада.mw
@@ -18,7 +18,7 @@ PopDens=672|
 Government=[[монархия]]|
 CreateDate=[[1974]]|
 
-OfLangs=[[аҥгличан йылме|аҥгличан]]|
+OfLangs=[[англичан йылме|англичан]]|
 HoSTtl=[[Премьер-министр]]|
 HoSNm=[[Тиллман Томас]]|
 
