*Empty MediaWiki Message*

--- a/Йылме_код-влак.mw
+++ b/Йылме_код-влак.mw
@@ -12,7 +12,7 @@
 * тиде эл-влакын ([[ccTLD]]) кӱшыл кӱкшытан домен лӱм-влак Интернетыште — икмыняр вес умылымаш уло.
 
 == ГОСТ 7.75–97 ==
-ГОСТ 7.75–97 «Йылмылӱм код-влак» ИСО 639-лан келшен толеш да йылме лӱмерым [[Марий йылме|марла]] да [[Аҥгличан йылме|аҥгличанла]], 3-йӱкпалан код-влакым кириллик [[тиштер]] негызеш, 3-йӱкпалан код-влакым латин тиштер негызеш, 3-цыпран код-влакым куча.
+ГОСТ 7.75–97 «Йылмылӱм код-влак» ИСО 639-лан келшен толеш да йылме лӱмерым [[Марий йылме|марла]] да [[Англичан йылме|англичанла]], 3-йӱкпалан код-влакым кириллик [[тиштер]] негызеш, 3-йӱкпалан код-влакым латин тиштер негызеш, 3-цыпран код-влакым куча.
 
 ГОСТ 7.75–97 тиде кугыжаныш-влакыште стандарт улеш:
 * [[Белоруссий|Белоруссий Республик]]
@@ -64,7 +64,7 @@
  |аве
  |016
  |-
- |[[Адаҥгме йылме|Адаҥгме]]
+ |[[Адангме йылме|Адангме]]
  |—
  |ada
  |ada
@@ -134,11 +134,11 @@
  |амх
  |040
  |-
- |[[Аҥгличан йылме|Аҥгличан]]
+ |[[Англичан йылме|Англичан]]
  |en
  |eng
  |eng
- |аҥг
+ |анг
  |045
  |-
  |[[Араб йылме|Араб]]
@@ -274,7 +274,7 @@
  |бем
  |097
  |-
- |[[Беҥгал йылме|Беҥгал]]
+ |[[Бенгал йылме|Бенгал]]
  |bn
  |ben
  |ben
@@ -379,7 +379,7 @@
  |ваш
  |132
  |-
- |[[Веҥгыр йылме|Веҥгыр]]
+ |[[Венгр йылме|Венгр]]
  |hu
  |hun
  |hun
@@ -575,7 +575,7 @@
  |дел
  |179
  |-
- |[[Дзоҥг-кэ йылме|Дзоҥг-кэ]]
+ |[[Дзонг-кэ йылме|Дзонг-кэ]]
  |dz
  |dzo
  |dzo
@@ -617,7 +617,7 @@
  |дуа
  |190
  |-
- |[[Дуҥган йылме|Дуҥган]]
+ |[[Дунган йылме|Дунган]]
  |—
  |—
  |dng
@@ -701,11 +701,11 @@
  |ило
  |203
  |-
- |[[Иҥгуш йылме|Иҥгуш]]
+ |[[Ингуш йылме|Ингуш]]
  |—
  |inh
  |inh
- |иҥг
+ |инг
  |205
  |-
  |[[Индонез йылме|Индонез]]
@@ -715,14 +715,14 @@
  |инд
  |210
  |-
- |[[Интерлиҥгва|Интерлиҥгва]]
+ |[[Интерлингва|Интерлингва]]
  |ia
  |ina
  |ina
  |ина
  |215
  |-
- |[[Интерлиҥгве|Интерлиҥгве]]
+ |[[Интерлингве|Интерлингве]]
  |ie
  |ile
  |ile
@@ -939,7 +939,7 @@
  |кит
  |315
  |-
- |[[Коклааҥгличан йылме|Коклааҥгличан]]
+ |[[Коклаангличан йылме|Коклаангличан]]
  |—
  |enm
  |enm
@@ -974,7 +974,7 @@
  |кои
  |320
  |-
- |[[Коҥго (йылме)|Коҥго]]
+ |[[Конго (йылме)|Конго]]
  |kg
  |kon
  |kon
@@ -1149,7 +1149,7 @@
  |лез
  |390
  |-
- |[[Лиҥгала йылме|Лиҥгала]]
+ |[[Лингала йылме|Лингала]]
  |ln
  |lin
  |lin
@@ -1170,7 +1170,7 @@
  |лоз
  |402
  |-
- |[[Луба-катаҥга йылме|Луба-катаҥга]]
+ |[[Луба-катанга йылме|Луба-катанга]]
  |lu
  |lub
  |lub
@@ -1268,7 +1268,7 @@
  |млт
  |430
  |-
- |[[Мандиҥго (йылме)|Мандиҥго]]
+ |[[Мандинго (йылме)|Мандинго]]
  |—
  |man
  |man
@@ -1338,7 +1338,7 @@
  |мик
  |452
  |-
- |[[Минаҥгкабау йылме|Минаҥгкабау]]
+ |[[Минангкабау йылме|Минангкабау]]
  |—
  |min
  |min
@@ -1366,14 +1366,14 @@
  |мол
  |460
  |-
- |[[Моҥго йылме|Моҥго]]
+ |[[Монго йылме|Монго]]
  |—
  |lol
  |lol
  |мог
  |462
  |-
- |[[Моҥгол йылме|Моҥгол]]
+ |[[Монгол йылме|Монгол]]
  |mn
  |mon
  |mon
@@ -1422,7 +1422,7 @@
  |нбл
  |474
  |-
- |[[Ндуҥга йылме|Ндуҥга]]
+ |[[Ндунга йылме|Ндунга]]
  |ng
  |ndo
  |ndo
@@ -1590,14 +1590,14 @@
  |пли
  |527
  |-
- |[[Пампаҥга йылме|Пампаҥга]]
+ |[[Пампанга йылме|Пампанга]]
  |—
  |pam
  |pam
  |пам
  |528
  |-
- |[[Паҥгасинан йылме|Паҥгасинан]]
+ |[[Пангасинан йылме|Пангасинан]]
  |—
  |pag
  |pag
@@ -1681,7 +1681,7 @@
  |рад
  |555
  |-
- |[[Раротоҥго (йылме)|Раротоҥго]]
+ |[[Раротонго (йылме)|Раротонго]]
  |—
  |rar
  |rar
@@ -1737,7 +1737,7 @@
  |смо
  |578
  |-
- |[[Саҥго йылме|Саҥго]]
+ |[[Санго йылме|Санго]]
  |sg
  |sag
  |sag
@@ -1807,7 +1807,7 @@
  |сик
  |598
  |-
- |[[Сиҥгал йылме|Сиҥгал]]
+ |[[Сингал йылме|Сингал]]
  |si
  |sin
  |sin
@@ -2010,28 +2010,28 @@
  |тир
  |683
  |-
- |[[Тлиҥгит йылме|Тлиҥгит]]
+ |[[Тлингит йылме|Тлингит]]
  |—
  |tli
  |tli
  |тли
  |684
  |-
- |[[Тоҥго (йылме)|Тоҥго (ньяса)]]
+ |[[Тонго (йылме)|Тонго (ньяса)]]
  |—
  |tog
  |tog
  |тог
  |685
  |-
- |[[Тоҥго (йылме)|Тоҥго (тоҥго-исланд)]]
+ |[[Тонго (йылме)|Тонго (тонго-исланд)]]
  |to
  |ton
  |ton
  |тон
  |686
  |-
- |[[Тоштоаҥгличан йылме|Тоштоаҥгличан]]
+ |[[Тоштоангличан йылме|Тоштоангличан]]
  |—
  |ang
  |ang
@@ -2108,7 +2108,7 @@
  |тсн
  |688
  |-
- |[[Тсоҥго (йылме)|Тсоҥго]]
+ |[[Тсонго (йылме)|Тсонго]]
  |ts
  |tso
  |tso
@@ -2129,7 +2129,7 @@
  |тур
  |693
  |-
- |[[Тӱркмен йылме|Тӱркмен]]
+ |[[Туркмен йылме|Туркмен]]
  |tk
  |tuk
  |tuk
@@ -2192,7 +2192,7 @@
  |урд
  |730
  |-
- |[[Фаҥг (йылме)|Фаҥг]]
+ |[[Фанг (йылме)|Фанг]]
  |—
  |fan
  |fan
@@ -2465,7 +2465,7 @@
  |шор
  |810
  |-
- |[[Шотланд (аҥглошотланд) йылме|Шотланд (аҥглошотланд)]]
+ |[[Шотланд (англошотланд) йылме|Шотланд (англошотланд)]]
  |—
  |sco
  |sco
@@ -2486,7 +2486,7 @@
  |эве
  |820
  |-
- |[[Эвенк йылме|Эвенк (туҥгус)]]
+ |[[Эвенк йылме|Эвенк (тунгус)]]
  |—
  |—
  |evn
