--- a/Венгрий.mw
+++ b/Венгрий.mw
@@ -1,10 +1,10 @@
 {{эл|
-OfNm1= Веҥгр республик|
+OfNm1= Венгр республик|
 OfNm2= Magyar Köztársaság|
 Flag=[[Файл:Flag_of_Hungary.svg|150px]]|
 CoA=[[Файл:Coat_of_arms_of_Hungary.png|110px]]|
-FlagLnk=[[Веҥгрийын тистыже]]|
-CoALnk=[[Веҥгрийын ойыпшо]]|
+FlagLnk=[[Венгрийын тистыже]]|
+CoALnk=[[Венгрийын ойыпшо]]|
 MapName=[[Файл:Location_Hungary.svg|251px]]|
 CtrNm=[[Будапешт]]|
 CreateDate=[[1000]]|
@@ -20,7 +20,7 @@ PopDens=107,7|
 Government=[[парламент республик]]|
 
 
-OfLangs=[[веҥгр йылме]]|
+OfLangs=[[венгр йылме]]|
 RegLangs=|
 
 HoSTtl=[[Президент]]|
@@ -37,7 +37,7 @@ GDPCRnk=|
 
 
 
-Currency=[[Веҥгр форинт]] (HUF)|
+Currency=[[Венгр форинт]] (HUF)|
 Time=+1 (CET)|
 Tele=36|
 Domain=[[.hu]], [[.eu]] ([[Европо Ушем]]ыш пура) |
@@ -59,7 +59,7 @@ Anthem=Himnusz|
 {{Европо Ушем}}
 {{Европо}}
 
-[[Категорий:Веҥгрий]]
+[[Категорий:Венгрий]]
 
 {{Link GA|de}}
 {{Link GA|eo}}
