--- a/Крылова,_Алевтина_Александровна.mw
+++ b/Крылова,_Алевтина_Александровна.mw
@@ -4,7 +4,7 @@
 
 Алевтина Крылова - профессионал мурызо. Тудо 1978-1982 ийлаште Палантай лӱмеш музыкальный училищын вокальный пӧлкаште Лидия Ивановна Мишуринан классыштыже тунемын. Лидия Бочкарева да Александр Беляев дене пырля ик курсышто лийыныт.
 
-Алевтина Крыловам училище деч вара Марий филармонийысе хоровой капеллышке пашаш налыныт. Ынде тышке толмыжлан коло ий утла эртен. Тиде жапыште капелла дене пырля Россий мучко тӱрлӧ олалаште, шуко концертлаште лияшыже логалын. 1986 да 1988 ийлаште [[Веҥгрий]]ыш миен коштыныт. Российыште гастроль дене [[Сарытау]], [[Ижевск]], [[Волгыдо]], [[Астрахань]], [[Ленинград]] олалаште лийыныт.
+Алевтина Крыловам училище деч вара Марий филармонийысе хоровой капеллышке пашаш налыныт. Ынде тышке толмыжлан коло ий утла эртен. Тиде жапыште капелла дене пырля Россий мучко тӱрлӧ олалаште, шуко концертлаште лияшыже логалын. 1986 да 1988 ийлаште [[Венгрий]]ыш миен коштыныт. Российыште гастроль дене [[Сарытау]], [[Ижевск]], [[Волгыдо]], [[Астрахань]], [[Ленинград]] олалаште лийыныт.
 
 Капеллыште мурен коштшыжла ала-кузе сольный концертым ыштышаш нерген шоненат огыл. Ожнырак илышыжат каньылырак лийын. Кызыт капеллын гастроль дене коштмыжо шагалеммылан кӧра, артист-влакын илышыштат удаҥмыла чучеш. Санденак южо мурызо артист-влак сольный концертым ышташ кумылаҥыныт. Тыге Раисия Михайловна Даниловат посна концертым чоҥа. Эше икмыняр мурызым ушештараш лиеш. Тыгак Алевтина Крылованат концертше лийын. Тудо 2000-ше ийын Идым тылзыште Морко кундемын [[Волаксола]] ялыште эртен. Мурызо икымше гана сольный концерт программыж дене калык ончыко лектын. Концертыште палыме муро-влак - Кузьма Смирновын "Садше ужаргалын», А.Яшмолкинын «Шонанпыл», М.Степановым «Тый кӱлат, тыяк», Ю.Евдокимовын «Лач пырляште весела» - лийыныт. Тиддеч посна Ю.Евдокимовын, В.Алексеевын да моло [[Семмастар|семвозышын]] нигушто йоҥгалтдыме у мурышт дене палдарен. Чыла тиде муро-влак мурызын усталык касыштыже сылнын йоҥгалтыныт.
 
