*Empty MediaWiki Message*

--- a/Тэзе_(тиште).mw
+++ b/Тэзе_(тиште).mw
@@ -33,7 +33,7 @@
 |-
 | XIII || [[1990]] || [[Прага]]|| {{Чехийын тистыже}} [[Чехий]]
 |-
-| XIV || [[1991]] || [[Будапешт]]|| {{Веҥгрийын тистыже}} [[Веҥгрий]]
+| XIV || [[1991]] || [[Будапешт]]|| {{Венгрийын тистыже}} [[Венгрий]]
 |-
 | XV || [[1992]] || [[Вена]]|| {{Австрийын тистыже}} [[Австрий]]
 |-
