*Empty MediaWiki Message*

--- a/Тэзе_(тиште).mw
+++ b/Тэзе_(тиште).mw
@@ -53,7 +53,7 @@
 |-
 | XXIII || [[2000]] || [[Барселона]]|| {{Испанийын тистыже}} [[Испаний]]|| 70 000
 |-
-| XXIV || [[2001]] || [[Будапешт]]|| {{Веҥгрийын тистыже}} [[Веҥгрий]]|| 70 000
+| XXIV || [[2001]] || [[Будапешт]]|| {{Венгрийын тистыже}} [[Венгрий]]|| 70 000
 |-
 | XXV || [[2002]] || [[Париж]]|| {{Францийын тистыже}} [[Франций]]|| 80 000
 |-
