*Empty MediaWiki Message*

--- a/Франций.mw
+++ b/Франций.mw
@@ -1,10 +1,10 @@
 {{эл|
-OfNm1= Пырансе|
+OfNm1= Франций|
 OfNm2= République française|
 Flag=[[Файл:Flag_of_France.svg|150px]]|
 CoA=[[Файл:Armoiries république française.svg|110px]]|
-FlagLnk=[[Пырансын тистыже]]|
-CoALnk=[[Пырансын ойыпшо]]|
+FlagLnk=[[Францийсын тистыже]]|
+CoALnk=[[Францийын ойыпшо]]|
 MapName=[[Файл:EU_location_FRA.png|251px]]|
 CtrNm=[[Париж]]|
 
@@ -44,7 +44,7 @@ Motto=Liberté, Égalité, Fraternité
 
 
 
-'''Пырансе''' (Франций, {{lang-fr|France}}) — [[эл]] [[Европо|Европышто]].
+'''Франций''' ({{lang-fr|France}}) — [[эл]] [[Европо|Европышто]].
 
 == Эртымгорно == 
 
@@ -54,7 +54,7 @@ Motto=Liberté, Égalité, Fraternité
 {{Европо Ушем}}
 {{Европо}}
 
-[[Категорий:Пырансе]]
+[[Категорий:Франций]]
 
 {{Link FA|fr}}
 
