*Empty MediaWiki Message*

--- a/Француз_йылме.mw
+++ b/Француз_йылме.mw
@@ -1,7 +1,7 @@
-'''Пырансу‘з йылме''' (пырансузла ''français'') — [[Индоевропысо йылме-влак|индоевропысо]] ([[Роман йылме-влак|роман]]) йылме. Кугыжаныш йылме [[Пырансе|Пырансыште]].
+'''Француз йылме''' (французла ''français'') — [[Индоевропысо йылме-влак|индоевропысо]] ([[Роман йылме-влак|роман]]) йылме. Кугыжаныш йылме [[Франций|Францийыште]].
 
 
-[[Категорий:Пырансуз йылме]]
+[[Категорий:Француз йылме]]
 [[Категорий:Роман йылме-влак]]
 
 [[ace:Bahsa Peurancih]]
